# nuance

./: .gitignore  DISCOVERY_REPORT.md  ai-coding-framework-guide.md  implementation-bridge.md  start_here.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  logging_config.py  main.py
backend/app/ai/: __init__.py  base.py  claude.py
backend/app/clients/: __init__.py  claude.py  deepgram.py  resend.py  supabase.py  telegram.py
backend/app/contracts/: __init__.py  agent_output_v0.py  mapper.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/models/: __init__.py  database.py
backend/app/prompts/: __init__.py  registry.py
backend/app/routers/: __init__.py  ai.py  knowledge.py  telegram.py  transcription.py
backend/app/services/: __init__.py  avoidance.py  breakdown.py  coaching.py  complexity.py  confidence.py  extraction.py  extraction_orchestrator.py  intent.py  intent_logger.py  intent_router.py  knowledge_objects.py  knowledge_writeback.py  telegram_connection.py  token_budget.py  transcription.py
backend/app/utils/: __init__.py  circuit_breaker.py  rate_limiter.py  timezone.py
backend/jobs/: __init__.py  eod_check.py  idle_nudge.py  morning_check.py  state_transitions.py
backend/supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_intent_log.sql  004_inactive_users_function.sql  005_telegram_connections.sql  006_knowledge_objects.sql
backend/tests/: test_contract_v0.py  test_knowledge_objects.py
(+123 files in other folders)
